# Multidimentional-histogram

./: .gitignore  CMakeLists.txt  columnsBasedPatialReduction.txt  export.sh  pythonCounts.txt  rowBasedPatialReduction.txt  setup.sh  test.py
src_cpp/: Interface.cpp  Interface.cu  histogram
src_python/: README.txt  baseline.py
